employee home changes and horizontal scroll fixed

--- a/api/customer/static/css/customer_home.css
+++ b/api/customer/static/css/customer_home.css
@@ -109,7 +109,7 @@ a:hover {color:#262f48}
 }
 
 .content {
-    width: 100vw;
+    width: 100%;
     top: 0;
     margin-top: 50px; 
     min-height: calc(100vh - 95px);
